--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall":"prisma generate"
-
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.9",
@@ -35,6 +34,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
+    "react-hot-toast": "^2.4.1",
     "recharts": "^2.12.7",
     "stripe": "^15.8.0",
     "tailwind-merge": "^2.2.1",
